# PortfolioWebsite

./: .gitignore  Dockerfile  LICENSE  README.md  container-definitions.json  delete.sh  deploy.sh  dev.sh  docker-compose.override.yml  docker-compose.yml  edits.sh  nginx.conf  package-lock.json  package.json  permission.sh  recordset.json  response-models.json  restart.sh  setup.sh  tsconfig.json
amplify/: team-provider-info.json
amplify/#current-cloud-backend/: amplify-meta.json
amplify/.config/: local-env-info.json  project-config.json
api/: .env  Cargo.toml  Dockerfile  Dockerfile.dev
api/src/: main.rs  send_mail.rs  send_resume.rs
backend/: Cargo.toml  bootstrap  template.yaml
backend/src/: main.rs  read_file.rs  send_mail.rs
frontend/: Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json
frontend/public/: bio.txt  companyDescriptions.txt  companyLinks.txt  companyNames.txt  companyPeriods.txt  companyTitles.txt  frameworksLibraries.txt  index.html  languages.txt  linkedin.txt  name.txt  projectDescriptions.txt  projectLinks.txt  projectNames.txt  technologies.txt
frontend/src/: App.tsx  constants.js  index.css  theme.ts
public/: bio.txt  github.txt  index.html  languages.txt  technologies.txt
src/: App.tsx  index.tsx  reportWebVitals.ts  theme.ts
src/components/: NavigationBar.tsx  SkillsRatings.tsx
src/hooks/: useCompanyDescriptions.ts  useCompanyNames.ts  useGithubLink.ts  useHeadshot.ts  useLinkedinLink.ts  useName.ts  useProjectNames.ts  useSocialButtons.ts  useTechnologies.ts
src/routing/: AllRoutes.tsx  paths.ts
(+65 files in other folders)
