[package]
name = "resume-website-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
actix-web =  "4.0"
mime = "0.3"
actix-multipart = "0.6.0"
actix-cors = "0.6.5"
lettre = "0.10.1"
# sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls", "postgres"] } 
serde = { version = "1.0.193", features = ["derive"] }